infrastructure/kyverno/policies/require-standard-labels-deployment.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-standard-labels-deployment
spec:
  admission: true
  background: true
  validationFailureAction: Enforce
  rules:
    - name: check-owner-and-cost-center-on-deployment
      match:
        any:
          - resources:
              kinds:
                - Deployment
              namespaces:
                - default
      exclude:
        any:
          # Exclude Knative-generated deployments which are created by the system
          - resources:
              selector:
                matchExpressions:
                  - key: serving.knative.dev/configuration
                    operator: Exists
      skipBackgroundRequests: true
      validate:
        message: >-
          Deployment resources must set metadata.labels.owner and
          metadata.labels.cost-center.
        pattern:
          metadata:
            labels:
              owner: "?*"
              cost-center: "?*"
